--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@ledgerhq/web3-subprovider": "^4.12.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "aes-js": "^3.1.1",
     "alertify.js": "^1.0.12",
     "angular-froala-wysiwyg": "^2.8.1",
     "bignumber.js": "^5.0.0",
@@ -98,6 +99,7 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
+    "node-rsa": "^1.0.0",
     "pdf.js": "^0.1.0",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
