--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.2",
     "core-js": "^2.5.7",
+    "crypto-browserify": "^3.12.0",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
