refactor(wallet): use @muzika/core injector

--- a/angular.json
+++ b/angular.json
@@ -399,12 +399,12 @@
             },
             "stage": {
               "optimization": false,
-              "outputHashing": "all",
+              "outputHashing": "none",
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
               "aot": false,
-              "extractLicenses": true,
+              "extractLicenses": false,
               "vendorChunk": false,
               "buildOptimizer": false,
               "fileReplacements": [
