--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "stream-browserify": "^2.0.1",
     "tassign": "^1.0.0",
     "truffle-contract": "^3.0.5",
-    "truffle-hdwallet-provider": "0.0.3",
+    "truffle-hdwallet-provider": "^0.0.5",
     "vm-browserify": "^1.0.1",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.5",
