--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - git submodule update --init --recursive
   - git submodule foreach --recursive git submodule update --init
 script:
+  - mv muzika-contract/config/truffle.provider.example.js muzika-contract/config/truffle.provider.js
   - npm run contract:compile
   - npm run lint
   - npm run build:core
