ci: npm install in muzika-contract

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,8 +52,9 @@ test:contract:
 
     - git submodule update --init --recursive
     - git submodule foreach --recursive git submodule update --init
-  script:
     - mv muzika-contract/config/truffle.provider.example.js muzika-contract/config/truffle.provider.js
+    - cd muzika-contract/ && npm install && cd ../
+  script:
     - npm run contract:compile
     - npm run lint
     - npm run build:core
