refactor(wallet): fix multiple request to sign message/transaction issue and refactor event with uuid

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "cordova-sqlite-storage": "^2.3.2",
     "core-js": "^2.5.7",
     "crypto-browserify": "^3.12.0",
+    "deserialize-error": "0.0.3",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
@@ -105,6 +106,7 @@
     "redux": "^4.0.0",
     "rxjs": "^6.2.0",
     "safe-buffer": "^5.1.2",
+    "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
     "tassign": "^1.0.0",
     "truffle-contract": "^3.0.5",
