fix(file-encryption): use ursa module instead of node-rsa module

--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
-    "node-rsa": "^1.0.0",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
     "rxjs": "^6.2.0",
@@ -110,6 +109,7 @@
     "stream-browserify": "^2.0.1",
     "tassign": "^1.0.0",
     "truffle-contract": "^3.0.5",
+    "ursa": "^0.9.4",
     "vm-browserify": "^1.0.1",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.5",
