--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
-    "preelectron:dev": "cross-env ENV=dev node set_environments.js",
+    "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
     "electron:dev": "npm run build:viewer && electron .",
-    "preelectron:linux": "cross-env ENV=stage node set_environments.js",
+    "preelectron:linux": "cross-env ENV=stage node hooks/set_environments.js",
     "electron:linux": "npm run build:viewer:prod && npx electron-builder build --linux",
-    "preelectron:windows": "cross-env ENV=stage node set_environments.js",
+    "preelectron:windows": "cross-env ENV=stage node hooks/set_environments.js",
     "electron:windows": "npm run build:viewer:stage && npx electron-builder build --windows",
-    "preelectron:mac": "cross-env ENV=stage node set_environments.js",
+    "preelectron:mac": "cross-env ENV=stage node hooks/set_environments.js",
     "electron:mac": "npm run build:viewer:stage && npx electron-builder build --mac",
     "publish:core": "npm run build:core && npm publish dist/muzika-core/ --access=public",
     "test": "ng test",
