refactor(ipc-interfaces): use ipcMainService & renderService refactor(project): move to parent folder (flat structure)

--- a/angular.json
+++ b/angular.json
@@ -383,7 +383,7 @@
             "production": {
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
@@ -400,7 +400,7 @@
             "stage": {
               "optimization": false,
               "outputHashing": "none",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
               "aot": false,
