--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "start:viewer:stage": "cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
     "serve:viewer": "ng serve muzika-ipfs-viewer --hmr",
     "serve:viewer:stage": "npm run serve:viewer -- -c stage",
+    "start:web": "ng serve muzika-web -o --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:web:stage": "npm run start:web -- -c stage",
+    "start:web:prod": "npm run start:web -- -c production",
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
@@ -28,6 +31,9 @@
     "build:viewer": "npm run electron:tsc && ng build muzika-ipfs-viewer",
     "build:viewer:stage": "npm run build:viewer -- -c stage",
     "build:viewer:prod": "npm run build:viewer -- -c production",
+    "build:web": "ng build muzika-wallet",
+    "build:web:stage": "npm run build:wallet -- -c stage",
+    "build:web:prod": "npm run build:wallet -- -c production",
     "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
