feat(cmd): shortcut support & navbar refactor

--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "npm run start:wallet",
     "start:viewer": "cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
     "start:viewer:stage": "cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
+    "sv": "npm run start:viewer",
+    "svs": "npm run start:viewer:stage",
     "serve:viewer": "ng serve muzika-ipfs-viewer --hmr",
     "serve:viewer:stage": "npm run serve:viewer -- -c stage",
-    "start:web": "ng serve muzika-web -o --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:web": "ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:web:stage": "npm run start:web -- -c stage",
     "start:web:prod": "npm run start:web -- -c production",
+    "sw": "npm run start:web",
+    "sws": "npm run start:web:stage",
     "build:core": "ng build muzika-core",
     "build:viewer": "npm run electron:tsc && ng build muzika-ipfs-viewer",
     "build:viewer:stage": "npm run build:viewer -- -c stage",
