--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
   },
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.0.3",
-    "@angular/cdk": "^6.2.0",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^6.2.0",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.0.4",
+    "@angular/cdk": "^6.2.1",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "^6.0.4",
+    "@angular/material": "^6.2.1",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/router": "^6.0.4",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "5.0.0-beta.10",
     "@ionic-native/native-storage": "^5.0.0-beta.10",
@@ -63,8 +63,8 @@
     "@ionic/angular": "4.0.0-alpha.7",
     "@ionic/schematics-angular": "latest",
     "@ionic/storage": "^2.1.3",
-    "@ledgerhq/hw-transport-u2f": "^4.12.0",
-    "@ledgerhq/web3-subprovider": "^4.12.0",
+    "@ledgerhq/hw-transport-u2f": "^4.13.0",
+    "@ledgerhq/web3-subprovider": "^4.14.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
@@ -93,10 +93,11 @@
     "ethereumjs-wallet-browser": "^0.6.0",
     "froala-editor": "^2.8.1",
     "fs-extra": "^5.0.0",
-    "ipfs": "^0.29.2",
+    "ipfs": "^0.29.3",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
+    "particles.js": "^2.0.0",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
     "rxjs": "^6.2.0",
@@ -108,18 +109,18 @@
     "ursa": "^0.9.4",
     "vm-browserify": "^1.0.1",
     "web3": "^0.20.6",
-    "web3-provider-engine": "^14.0.5",
+    "web3-provider-engine": "^14.0.6",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.6.7",
-    "@angular-devkit/build-ng-packagr": "^0.6.7",
-    "@angular/cli": "^6.0.7",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "^2.8.7",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/build-ng-packagr": "^0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.4",
+    "@angular/language-service": "^6.0.4",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
     "babel-polyfill": "^6.26.0",
@@ -147,17 +148,17 @@
     "ng-packagr": "^2.4.5",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
-    "prettier": "^1.13.2",
+    "prettier": "^1.13.5",
     "protractor": "^5.3.2",
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.11",
-    "ts-loader": "^4.3.0",
-    "ts-node": "^6.0.5",
+    "ts-loader": "^4.4.1",
+    "ts-node": "^6.1.0",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
     "wait-on": "^2.1.0",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.5"
   },
   "cordova": {
     "plugins": {
