--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:web:prod": "npm run build:wallet -- -c production",
     "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
     "electron:ready": "npx electron-builder install-app-deps",
-    "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
+    "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve --debug --inspect=5858",
     "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
     "electron:dev": "npm run build:viewer && electron .",
     "preelectron:linux": "cross-env ENV=stage node hooks/set_environments.js",
