feat(advisors, footer): update to new design

--- a/angular.json
+++ b/angular.json
@@ -236,6 +236,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "projects/web/src/assets/scrollspy.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/froala-editor/js/froala_editor.min.js",
               "node_modules/froala-editor/js/languages/ko.js",
