--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "froala-editor": "^2.8.1",
     "fs-extra": "^5.0.0",
     "ipfs": "^0.29.3",
+    "hls.js": "^0.9.1",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
