--- a/package.json
+++ b/package.json
@@ -91,10 +91,12 @@
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "ethereumjs-wallet-browser": "^0.6.0",
+    "ffmpeg-static": "^2.3.0",
+    "fluent-ffmpeg": "^2.1.2",
     "froala-editor": "^2.8.1",
     "fs-extra": "^5.0.0",
-    "ipfs": "^0.29.3",
     "hls.js": "^0.9.1",
+    "ipfs": "^0.29.3",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
