--- a/package.json
+++ b/package.json
@@ -44,23 +44,23 @@
   },
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.0.4",
+    "@angular/animations": "^6.0.5",
     "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
+    "@angular/common": "^6.0.5",
+    "@angular/compiler": "^6.0.5",
+    "@angular/core": "^6.0.5",
+    "@angular/forms": "^6.0.5",
+    "@angular/http": "^6.0.5",
     "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular/platform-browser": "^6.0.5",
+    "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/router": "^6.0.5",
     "@angularclass/hmr": "^2.1.3",
-    "@ionic-native/core": "5.0.0-beta.10",
+    "@ionic-native/core": "^5.0.0-beta.10",
     "@ionic-native/native-storage": "^5.0.0-beta.10",
-    "@ionic-native/splash-screen": "5.0.0-beta.10",
-    "@ionic-native/status-bar": "5.0.0-beta.10",
-    "@ionic/angular": "4.0.0-alpha.7",
+    "@ionic-native/splash-screen": "^5.0.0-beta.10",
+    "@ionic-native/status-bar": "^5.0.0-beta.10",
+    "@ionic/angular": "^4.0.0-alpha.7",
     "@ionic/schematics-angular": "latest",
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.13.0",
