--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:web": "ng build muzika-wallet",
     "build:web:stage": "npm run build:wallet -- -c stage",
     "build:web:prod": "npm run build:wallet -- -c production",
-    "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
+    "electron:tsc": "tsc -p tsconfig.electron.json",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve --debug --inspect=5858",
     "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
