WIP: feat(core): fix-up muzika/viewer

--- a/projects/core/common/tsconfig.json
+++ b/projects/core/common/tsconfig.json
@@ -12,8 +12,8 @@
     "module": "es2015",
     "types": ["node", "web3"],
     "typeRoots": [
-      "../../node_modules/@types",
-      "../../node_modules/@0xproject/typescript-typings/types"
+      "../../../node_modules/@types",
+      "../../../node_modules/@0xproject/typescript-typings/types"
     ],
     "lib": [
       "es2017",
