--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
             "project": "projects/core/ng-package.json",
-            "tsConfig": "projects/core/tsconfig.json"
+            "tsConfig": "projects/core/common/tsconfig.json"
           },
           "configurations": {
             "production": {
@@ -31,8 +31,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/core/tsconfig.json",
-              "projects/core/tsconfig.spec.json"
+              "projects/core/common/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
