--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muzika-platform",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "MIT",
   "main": "main.js",
   "scripts": {
@@ -65,6 +65,7 @@
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.13.0",
     "@ledgerhq/web3-subprovider": "^4.14.0",
+    "@muzika/core": "0.0.5",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
