feat(muzika/core/browser): separate HlsLoader with common module & available on electron node_src

--- a/projects/core/browser/tsconfig.json
+++ b/projects/core/browser/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "../../out-tsc/app",
-    "sourceMap": true,
-    "declaration": false,
+    "sourceMap": false,
+    "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -15,26 +15,18 @@
       "../../node_modules/@types",
       "../../node_modules/@0xproject/typescript-typings/types"
     ],
+    "paths": {
+      "@muzika/core": ["../common/public_api.ts"]
+    },
     "lib": [
       "es2017",
       "es2016",
       "es2015",
       "dom"
-    ],
-    "paths": {
-      "stream": ["../../node_modules/stream-browserify/index.js"],
-      "vm": ["../../node_modules/vm-browserify/index.js"],
-      "crypto": ["../../node_modules/crypto-browserify/index.js"],
-      "@muzika/core": ["../core/public_api.ts"],
-      "@muzika/core/angular": ["../core/angular/public_api.ts"],
-      "@muzika/core/browser": ["../core/browser/public_api.ts"]
-    }
+    ]
   },
   "exclude": [
     "src/test.ts",
-    "**/*.spec.ts",
-    "dist",
-    "app-builds",
-    "node_modules"
+    "**/*.spec.ts"
   ]
 }
