--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "muzika-platform",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "license": "MIT",
   "main": "main.js",
+  "author": "Muzika Foundation",
+  "description": "Decentralized Music platform",
   "scripts": {
     "ng": "ng",
     "start": "npm run start:wallet",
@@ -24,7 +26,7 @@
     "build:web": "ng build muzika-wallet",
     "build:web:stage": "npm run build:wallet -- -c stage",
     "build:web:prod": "npm run build:wallet -- -c production",
-    "electron:tsc": "tsc -p tsconfig.electron.json",
+    "electron:tsc": "tsc -p tsconfig.electron.json && npm link projects/core/",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve --debug --inspect=5858",
     "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
@@ -56,15 +58,16 @@
     "@angular/platform-browser-dynamic": "^6.0.5",
     "@angular/router": "^6.0.5",
     "@angularclass/hmr": "^2.1.3",
-    "@ionic-native/core": "^5.0.0-beta.10",
-    "@ionic-native/native-storage": "^5.0.0-beta.10",
-    "@ionic-native/splash-screen": "^5.0.0-beta.10",
-    "@ionic-native/status-bar": "^5.0.0-beta.10",
+    "@ionic-native/core": "^5.0.0-beta.11",
+    "@ionic-native/native-storage": "^5.0.0-beta.11",
+    "@ionic-native/splash-screen": "^5.0.0-beta.11",
+    "@ionic-native/status-bar": "^5.0.0-beta.11",
     "@ionic/angular": "^4.0.0-alpha.7",
-    "@ionic/schematics-angular": "latest",
+    "@ionic/schematics-angular": "^1.0.0-rc.8",
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.13.0",
     "@ledgerhq/web3-subprovider": "^4.14.0",
+    "@muzika/core": "0.0.6",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
@@ -87,6 +90,7 @@
     "core-js": "^2.5.7",
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
+    "domino": "^2.0.2",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
