--- a/projects/core/browser/package.json
+++ b/projects/core/browser/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@muzika/core/angular",
+  "name": "@muzika/core/browser",
   "main": "public_api.js",
   "ngPackage": {
-    "dest": "../../dist/muzika-core/angular",
+    "dest": "../../dist/muzika-core/browser",
     "deleteDestPath": false,
     "lib": {
       "entryFile": "./public_api.ts"
