--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@muzika/core",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "license": "MIT",
-  "main": "muzika-core/public_api.js",
-  "typings": "muzika-core/public_api.d.ts",
+  "main": "public_api.js",
+  "typings": "public_api.d.ts",
   "private": false,
   "peerDependency": {
     "@angular-redux/store": ">=7.0.0",
