--- a/projects/web/tsconfig.json
+++ b/projects/web/tsconfig.json
@@ -40,6 +40,9 @@
       ],
       "@muzika/core/angular": [
         "../core/angular/public_api.ts"
+      ],
+      "@muzika/core/browser": [
+        "../core/browser/public_api.ts"
       ]
     }
   },
