ci(travis): fix-up for Travis

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "build:viewer": "npm run electron:tsc && ng build muzika-ipfs-viewer",
     "build:viewer:stage": "npm run build:viewer -- -c stage",
     "build:viewer:prod": "npm run build:viewer -- -c production",
-    "build:web": "ng build muzika-wallet",
-    "build:web:stage": "npm run build:wallet -- -c stage",
-    "build:web:prod": "npm run build:wallet -- -c production",
+    "build:web": "ng build muzika-web",
+    "build:web:stage": "npm run build:web -- -c stage",
+    "build:web:prod": "npm run build:web -- -c production",
     "electron:tsc": "tsc -p tsconfig.electron.json && npm link projects/core/",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve --debug --inspect=5858",
