--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "hls.js": "^0.9.1",
     "ipfs": "^0.29.3",
     "jquery": "^3.3.1",
+    "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
     "particles.js": "^2.0.0",
