--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
     "@angular/animations": "^6.0.5",
-    "@angular/cdk": "^6.2.1",
+    "@angular/cdk": "^6.3.0",
     "@angular/common": "^6.0.5",
     "@angular/compiler": "^6.0.5",
     "@angular/core": "^6.0.5",
     "@angular/forms": "^6.0.5",
     "@angular/http": "^6.0.5",
-    "@angular/material": "^6.2.1",
+    "@angular/material": "^6.3.0",
     "@angular/platform-browser": "^6.0.5",
     "@angular/platform-browser-dynamic": "^6.0.5",
     "@angular/router": "^6.0.5",
@@ -63,7 +63,7 @@
     "@ionic-native/splash-screen": "^5.0.0-beta.11",
     "@ionic-native/status-bar": "^5.0.0-beta.11",
     "@ionic/angular": "^4.0.0-alpha.7",
-    "@ionic/schematics-angular": "^1.0.0-rc.8",
+    "@ionic/schematics-angular": "^1.0.0-testing.fa20842b",
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.13.0",
     "@ledgerhq/web3-subprovider": "^4.14.0",
@@ -102,9 +102,9 @@
     "froala-editor": "^2.8.1",
     "fs-extra": "^5.0.0",
     "hls.js": "^0.9.1",
+    "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
     "ipfs": "^0.29.3",
     "jquery": "^3.3.1",
-    "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
     "ngx-bootstrap": "^3.0.0",
     "ngx-uploader": "^4.3.0",
     "particles.js": "^2.0.0",
@@ -117,7 +117,7 @@
     "tassign": "^1.0.0",
     "truffle-contract": "^3.0.5",
     "ursa": "^0.9.4",
-    "vm-browserify": "^1.0.1",
+    "vm-browserify": "^1.1.0",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.6",
     "zone.js": "^0.8.26"
@@ -150,7 +150,7 @@
     "electron-reload": "1.2.2",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.3",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
