--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -23,7 +23,9 @@
     ],
     "paths": {
       "@muzika/core": ["projects/core/index.ts"],
-      "@muzika/core/angular": ["projects/core/angular/index.ts"]
+      "@muzika/core/angular": ["projects/core/angular/index.ts"],
+      "@muzika/core/nodejs": ["projects/core/nodejs/index.ts"],
+      "@muzika/core/browser": ["projects/core/browser/index.ts"]
     }
   },
   "files": [
