--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.4.5",
+    "ng-packagr": "^4.0.0-rc.1",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.13.5",
