--- a/projects/web/tsconfig.json
+++ b/projects/web/tsconfig.json
@@ -43,6 +43,9 @@
       ],
       "@muzika/core/browser": [
         "../core/browser/public_api.ts"
+      ],
+      "@muzika/core/nodejs": [
+        "../core/nodejs/public_api.ts"
       ]
     }
   },
