--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
   },
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.0.5",
+    "@angular/animations": "^6.1.0-beta.2",
     "@angular/cdk": "^6.3.0",
-    "@angular/common": "^6.0.5",
-    "@angular/compiler": "^6.0.5",
-    "@angular/core": "^6.0.5",
-    "@angular/forms": "^6.0.5",
-    "@angular/http": "^6.0.5",
+    "@angular/common": "^6.1.0-beta.2",
+    "@angular/compiler": "^6.1.0-beta.2",
+    "@angular/core": "^6.1.0-beta.2",
+    "@angular/forms": "^6.1.0-beta.2",
+    "@angular/http": "^6.1.0-beta.2",
     "@angular/material": "^6.3.0",
-    "@angular/platform-browser": "^6.0.5",
-    "@angular/platform-browser-dynamic": "^6.0.5",
-    "@angular/router": "^6.0.5",
+    "@angular/platform-browser": "^6.1.0-beta.2",
+    "@angular/platform-browser-dynamic": "^6.1.0-beta.2",
+    "@angular/router": "^6.1.0-beta.2",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "^5.0.0-beta.11",
     "@ionic-native/native-storage": "^5.0.0-beta.11",
@@ -99,13 +99,13 @@
     "ffmpeg-static": "^2.3.0",
     "ffprobe-static": "^2.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "froala-editor": "^2.8.1",
+    "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
     "hls.js": "^0.9.1",
     "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
     "ipfs": "^0.29.3",
     "jquery": "^3.3.1",
-    "ngx-bootstrap": "^3.0.0",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^4.3.0",
     "particles.js": "^2.0.0",
     "popper.js": "^1.14.3",
@@ -115,7 +115,7 @@
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
     "tassign": "^1.0.0",
-    "truffle-contract": "^3.0.5",
+    "truffle-contract": "^3.0.6",
     "ursa": "^0.9.4",
     "vm-browserify": "^1.1.0",
     "web3": "^0.20.6",
@@ -127,9 +127,9 @@
     "@0xproject/typescript-typings": "^0.3.2",
     "@angular-devkit/build-angular": "^0.6.8",
     "@angular-devkit/build-ng-packagr": "^0.6.8",
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/language-service": "^6.0.4",
+    "@angular/cli": "^6.1.0-rc.0",
+    "@angular/compiler-cli": "^6.1.0-beta.2",
+    "@angular/language-service": "^6.1.0-beta.2",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
@@ -162,9 +162,9 @@
     "protractor": "^5.3.2",
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
-    "truffle": "^4.1.11",
+    "truffle": "^4.1.12",
     "ts-loader": "^4.4.1",
-    "ts-node": "^6.1.0",
+    "ts-node": "^6.1.2",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
     "wait-on": "^2.1.0",
