--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.13.0",
     "@ledgerhq/web3-subprovider": "^4.14.0",
-    "@muzika/core": "0.0.7",
+    "@muzika/core": "0.0.8",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
@@ -125,8 +125,8 @@
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.6.8",
-    "@angular-devkit/build-ng-packagr": "^0.6.8",
+    "@angular-devkit/build-angular": "^0.7.0-rc.0",
+    "@angular-devkit/build-ng-packagr": "^0.7.0-rc.0",
     "@angular/cli": "^6.1.0-rc.0",
     "@angular/compiler-cli": "^6.1.0-beta.2",
     "@angular/language-service": "^6.1.0-beta.2",
@@ -155,7 +155,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.4.5",
+    "ng-packagr": "^3.0.3",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.13.5",
