refactor(post): fully redesign artist studio (content management UX)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,7 @@ test:contract:
     - npm run contract:compile
     - npm run lint
     - npm run build:core
+    - npm run build:web
     - npm run build:viewer
   tags:
     - frontend
