--- a/package.json
+++ b/package.json
@@ -6,24 +6,26 @@
   "author": "Muzika Foundation",
   "description": "Decentralized Music platform",
   "scripts": {
+    "postinstall": "node hooks/npm_postinstall",
+    "postinstall:web": "node hooks/npm_postinstall-web",
     "ng": "ng",
     "start": "npm run start:wallet",
-    "start:viewer": "cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
-    "start:viewer:stage": "cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
+    "start:viewer": "npm run postinstall && cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
+    "start:viewer:stage": "npm run postinstall && cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
     "sv": "npm run start:viewer",
     "svs": "npm run start:viewer:stage",
     "serve:viewer": "ng serve muzika-ipfs-viewer --hmr",
     "serve:viewer:stage": "npm run serve:viewer -- -c stage",
-    "start:web": "ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:web": "npm run postinstall:web && ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:web:stage": "npm run start:web -- -c stage",
     "start:web:prod": "npm run start:web -- -c production",
     "sw": "npm run start:web",
     "sws": "npm run start:web:stage",
     "build:core": "ng build muzika-core",
-    "build:viewer": "npm run electron:tsc && ng build muzika-ipfs-viewer",
+    "build:viewer": "npm run postinstall && npm run electron:tsc && ng build muzika-ipfs-viewer",
     "build:viewer:stage": "npm run build:viewer -- -c stage",
     "build:viewer:prod": "npm run build:viewer -- -c production",
-    "build:web": "ng build muzika-web",
+    "build:web": "npm run postinstall:web && ng build muzika-web",
     "build:web:stage": "npm run build:web -- -c stage",
     "build:web:prod": "npm run build:web -- -c production",
     "electron:tsc": "tsc -p tsconfig.electron.json && npm link projects/core/",
@@ -46,33 +48,33 @@
   },
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.1.0-beta.2",
-    "@angular/cdk": "^6.3.0",
-    "@angular/common": "^6.1.0-beta.2",
-    "@angular/compiler": "^6.1.0-beta.2",
-    "@angular/core": "^6.1.0-beta.2",
-    "@angular/forms": "^6.1.0-beta.2",
-    "@angular/http": "^6.1.0-beta.2",
-    "@angular/material": "^6.3.0",
-    "@angular/platform-browser": "^6.1.0-beta.2",
-    "@angular/platform-browser-dynamic": "^6.1.0-beta.2",
-    "@angular/router": "^6.1.0-beta.2",
+    "@angular/animations": "^6.1.0-beta.3",
+    "@angular/cdk": "^6.3.2",
+    "@angular/common": "^6.1.0-beta.3",
+    "@angular/compiler": "^6.1.0-beta.3",
+    "@angular/core": "^6.1.0-beta.3",
+    "@angular/forms": "^6.1.0-beta.3",
+    "@angular/http": "^6.1.0-beta.3",
+    "@angular/material": "^6.3.2",
+    "@angular/platform-browser": "^6.1.0-beta.3",
+    "@angular/platform-browser-dynamic": "^6.1.0-beta.3",
+    "@angular/router": "^6.1.0-beta.3",
     "@angularclass/hmr": "^2.1.3",
-    "@ionic-native/core": "^5.0.0-beta.11",
-    "@ionic-native/native-storage": "^5.0.0-beta.11",
-    "@ionic-native/splash-screen": "^5.0.0-beta.11",
-    "@ionic-native/status-bar": "^5.0.0-beta.11",
+    "@ionic-native/core": "^5.0.0-beta.13",
+    "@ionic-native/native-storage": "^5.0.0-beta.13",
+    "@ionic-native/splash-screen": "^5.0.0-beta.13",
+    "@ionic-native/status-bar": "^5.0.0-beta.13",
     "@ionic/angular": "^4.0.0-alpha.7",
     "@ionic/schematics-angular": "^1.0.0-testing.fa20842b",
     "@ionic/storage": "^2.1.3",
-    "@ledgerhq/hw-transport-u2f": "^4.13.0",
-    "@ledgerhq/web3-subprovider": "^4.14.0",
+    "@ledgerhq/hw-transport-u2f": "^4.15.0",
+    "@ledgerhq/web3-subprovider": "^4.15.0",
     "@muzika/core": "0.0.8",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
     "alertify.js": "^1.0.12",
-    "angular-froala-wysiwyg": "^2.8.1",
+    "angular-froala-wysiwyg": "^2.8.4",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
     "bootstrap": "^4.1.1",
@@ -86,7 +88,7 @@
     "cordova-plugin-nativestorage": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.2",
+    "cordova-sqlite-storage": "^2.3.3",
     "core-js": "^2.5.7",
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
@@ -128,8 +130,8 @@
     "@angular-devkit/build-angular": "^0.7.0-rc.0",
     "@angular-devkit/build-ng-packagr": "^0.7.0-rc.0",
     "@angular/cli": "^6.1.0-rc.0",
-    "@angular/compiler-cli": "^6.1.0-beta.2",
-    "@angular/language-service": "^6.1.0-beta.2",
+    "@angular/compiler-cli": "^6.1.0-beta.3",
+    "@angular/language-service": "^6.1.0-beta.3",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
@@ -142,7 +144,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
-    "codelyzer": "^4.3.0",
+    "codelyzer": "^4.4.2",
     "command-line-args": "^5.0.2",
     "cross-env": "^5.1.6",
     "electron": "2.0.2",
@@ -150,7 +152,7 @@
     "electron-reload": "1.2.2",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.3",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
@@ -158,13 +160,13 @@
     "ng-packagr": "^3.0.3",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
-    "prettier": "^1.13.5",
+    "prettier": "^1.13.7",
     "protractor": "^5.3.2",
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
-    "truffle": "^4.1.12",
-    "ts-loader": "^4.4.1",
-    "ts-node": "^6.1.2",
+    "truffle": "^4.1.13",
+    "ts-loader": "^4.4.2",
+    "ts-node": "^6.2.0",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
     "wait-on": "^2.1.0",
