refactor(intro-navbar): support translation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,5 +61,7 @@ test:contract:
     - npm run build:core
     - npm run build:web:prod
     - npm run build:viewer
+    - python -m pip install awscli
+    - aws s3 sync ./dist/web/ s3://$AWS_BUCKET --delete
   tags:
     - frontend
