fix(ci): artifacts with dist/web folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ test:contract:
     - cd muzika-contract/ && npm install && cd ../
   artifacts:
     paths:
-      - www/
+      - dist/web/
   script:
     - npm run contract:compile
     - npm run lint
