--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ deploy:stage:
   stage: deploy
   script:
     - python -m pip install awscli
-    - aws s3 sync ./www/ s3://$AWS_BUCKET --delete
+    - aws s3 sync ./dist/web/ s3://$AWS_BUCKET --delete
   only:
     - master
   tags:
