--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,7 @@ deploy:stage:
   script:
     - python -m pip install awscli
     - aws s3 sync ./dist/web/ s3://$AWS_BUCKET --delete
+    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID --paths "/index.html"
   only:
     - master
   tags:
