--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "bootstrap": "^4.1.1",
     "buffer": "^5.1.0",
     "chalk": "^2.4.1",
+    "classlist.js": "^1.1.20150312",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
