--- a/projects/web/tsconfig.json
+++ b/projects/web/tsconfig.json
@@ -9,7 +9,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "types": [
       "node",
       "web3"
@@ -20,7 +20,6 @@
       "../../node_modules/@0xproject/typescript-typings/types"
     ],
     "lib": [
-      "es2017",
       "es2016",
       "es2015",
       "dom"
