--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muzika-platform",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "license": "MIT",
   "main": "main.js",
   "author": "Muzika Foundation",
@@ -48,17 +48,17 @@
   },
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.1.0-beta.3",
+    "@angular/animations": "^6.0.9",
     "@angular/cdk": "^6.3.3",
-    "@angular/common": "^6.1.0-beta.3",
-    "@angular/compiler": "^6.1.0-beta.3",
-    "@angular/core": "^6.1.0-beta.3",
-    "@angular/forms": "^6.1.0-beta.3",
-    "@angular/http": "^6.1.0-beta.3",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/http": "^6.0.9",
     "@angular/material": "^6.3.3",
-    "@angular/platform-browser": "^6.1.0-beta.3",
-    "@angular/platform-browser-dynamic": "^6.1.0-beta.3",
-    "@angular/router": "^6.1.0-beta.3",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "^5.0.0-beta.13",
     "@ionic-native/native-storage": "^5.0.0-beta.13",
@@ -128,11 +128,11 @@
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.7.0-rc.1",
-    "@angular-devkit/build-ng-packagr": "^0.7.0-rc.1",
-    "@angular/cli": "^6.1.0-rc.1",
-    "@angular/compiler-cli": "^6.1.0-beta.3",
-    "@angular/language-service": "^6.1.0-beta.3",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/build-ng-packagr": "^0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/language-service": "^6.0.9",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
