--- a/package.json
+++ b/package.json
@@ -49,26 +49,26 @@
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
     "@angular/animations": "^6.0.9",
-    "@angular/cdk": "^6.3.3",
+    "@angular/cdk": "^6.4.0",
     "@angular/common": "^6.0.9",
     "@angular/compiler": "^6.0.9",
     "@angular/core": "^6.0.9",
     "@angular/forms": "^6.0.9",
     "@angular/http": "^6.0.9",
-    "@angular/material": "^6.3.3",
+    "@angular/material": "^6.4.0",
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
     "@angularclass/hmr": "^2.1.3",
-    "@ionic-native/core": "^5.0.0-beta.13",
-    "@ionic-native/native-storage": "^5.0.0-beta.13",
-    "@ionic-native/splash-screen": "^5.0.0-beta.13",
-    "@ionic-native/status-bar": "^5.0.0-beta.13",
-    "@ionic/angular": "^4.0.0-alpha.9",
+    "@ionic-native/core": "^5.0.0-beta.14",
+    "@ionic-native/native-storage": "^5.0.0-beta.14",
+    "@ionic-native/splash-screen": "^5.0.0-beta.14",
+    "@ionic-native/status-bar": "^5.0.0-beta.14",
+    "@ionic/angular": "^4.0.0-alpha.11",
     "@ionic/schematics-angular": "^1.0.0-testing.fa20842b",
     "@ionic/storage": "^2.1.3",
-    "@ledgerhq/hw-transport-u2f": "^4.19.0",
-    "@ledgerhq/web3-subprovider": "^4.19.0",
+    "@ledgerhq/hw-transport-u2f": "^4.20.0",
+    "@ledgerhq/web3-subprovider": "^4.20.0",
     "@muzika/core": "0.0.8",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
@@ -77,7 +77,7 @@
     "angular-froala-wysiwyg": "^2.8.4",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.2",
     "buffer": "^5.1.0",
     "chalk": "^2.4.1",
     "classlist.js": "^1.1.20150312",
@@ -86,14 +86,14 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.3",
     "core-js": "^2.5.7",
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
-    "domino": "^2.0.2",
+    "domino": "^2.0.3",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
@@ -113,7 +113,7 @@
     "particles.js": "^2.0.0",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
-    "rxjs": "^6.2.0",
+    "rxjs": "^6.2.2",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
@@ -128,11 +128,11 @@
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.6.8",
-    "@angular-devkit/build-ng-packagr": "^0.6.8",
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.9",
-    "@angular/language-service": "^6.0.9",
+    "@angular-devkit/build-angular": "^0.7.0-rc.3",
+    "@angular-devkit/build-ng-packagr": "^0.7.0-rc.3",
+    "@angular/cli": "^6.1.0-rc.3",
+    "@angular/compiler-cli": "^6.1.0-rc.0",
+    "@angular/language-service": "^6.1.0-rc.0",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
@@ -162,13 +162,13 @@
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.13.7",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.0",
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.13",
     "ts-loader": "^4.4.2",
     "ts-node": "^6.2.0",
-    "tslint": "^5.10.0",
+    "tslint": "^5.11.0",
     "typescript": "2.7.2",
     "wait-on": "^2.1.0",
     "webpack-cli": "^2.1.5"
