feat(ci): support electron builds artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,10 @@ test:contract:
     - npm run build:core
     - npm run build:web:prod
     - npm run build:viewer
+    - npm run electron:mac
+    - npm run electron:windows
+    - mv -f ./app-builds/Muzika*.exe ./dist/web/assets/muzika.exe
+    - mv -f ./app-builds/Muzika*.dmg ./dist/web/assets/muzika.dmg
   tags:
     - frontend
 
