--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,8 @@ test:contract:
     - npm run lint
     - npm run build:core
     - npm run build:web:prod
-    - npm run build:viewer
+
+    - npm run electron:ready
     - npm run electron:mac
     - npm run electron:windows
     - mv -f ./app-builds/Muzika*.exe ./dist/web/assets/muzika.exe
