--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
+    "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
     "ipfs": "^0.29.3",
@@ -129,6 +130,7 @@
     "vm-browserify": "^1.1.0",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.6",
+    "zcash-bitcore-lib": "git+https://github.com/MuzikaFoundation/zcash-bitcore-lib.git",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
