--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -36,6 +36,8 @@
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
     "rxjs": "^6.2.2",
+    "jquery": "^3.3.1",
+    "froala-editor": "2.8.1",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
