refactor(ci): use build:studio command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ test:contract:
     - npm run lint
     - npm run build:core
     - npm run build:web:prod
-    - npm run build:viewer
+    - npm run build:studio
   tags:
     - frontend
 
