refactor(studio-main): use openDevTools only in serving process

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:studio": "npm run postinstall && cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:studio-renderer electron:serve",
     "start:studio:stage": "npm run postinstall && cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:studio-renderer:stage electron:serve",
     "ss": "npm run start:studio",
-    "svs": "npm run start:studio:stage",
+    "sss": "npm run start:studio:stage",
     "serve:studio-renderer": "ng serve muzika-studio-renderer --hmr",
     "serve:studio-renderer:stage": "npm run serve:studio-renderer -- -c stage",
     "start:web": "npm run postinstall:web && ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
