fix(project): fix build environment

--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,13 @@
   "packages": [
     "projects/*"
   ],
+  "command": {
+    "bootstrap": {
+      "ignore": [
+        "muzika-studio-main"
+      ]
+    }
+  },
   "version": "0.0.9",
   "hoist": true
 }
