--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sw": "npm run start:web",
     "sws": "npm run start:web:stage",
     "tsc:core": "tsc -p projects/core/tsconfig.common.json && npm link projects/core/",
-    "tsc:studio-main": "tsc -p projects/studio-main/tsconfig.build.json",
+    "tsc:studio-main": "node hooks/symlink_node_modules.js && tsc -p projects/studio-main/tsconfig.build.json",
     "build:core": "ng build muzika-core",
     "build:studio": "npm run postinstall && npm run electron:tsc && ng build muzika-studio-renderer",
     "build:studio:stage": "npm run build:studio -- -c stage",
@@ -112,7 +112,7 @@
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
-    "ipfs": "^0.29.3",
+    "ipfs": "^0.30.1",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^6.0.1",
