--- a/package.json
+++ b/package.json
@@ -34,14 +34,18 @@
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron projects/studio-main --serve --debug --inspect=5858",
     "electron:build": "lerna run --stream --scope muzika-studio-main build",
+    "electron:publish": "lerna run --stream --scope muzika-studio-main publish",
     "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
     "electron:dev": "npm run build:studio && electron projects/studio-main",
     "preelectron:linux": "cross-env ENV=stage node hooks/set_environments.js",
     "electron:linux": "npm run build:studio:stage && npm run electron:build -- -- --linux",
+    "electron:linux:publish": "npm run build:studio:stage && npm run electron:publish -- -- --linux",
     "preelectron:windows": "cross-env ENV=stage node hooks/set_environments.js",
     "electron:windows": "npm run build:studio:stage && npm run electron:build -- -- --windows",
+    "electron:windows:publish": "npm run build:studio:stage && npm run electron:publish -- -- --windows",
     "preelectron:mac": "cross-env ENV=stage node hooks/set_environments.js",
     "electron:mac": "npm run build:studio:stage && npm run electron:build -- -- --mac",
+    "electron:mac:publish": "npm run build:studio:stage && npm run electron:publish -- -- --mac",
     "publish:core": "npm run build:core && npm publish dist/muzika-core/ --access=public",
     "test": "ng test",
     "lint": "ng lint",
