--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -7,7 +7,8 @@
   "author": "Muzika Foundation",
   "description": "Muzika platform Minimum Viable Product",
   "scripts": {
-    "build": "electron-builder build"
+    "build": "electron-builder build",
+    "publish": "electron-builder build --publish always"
   },
   "dependencies": {
     "@0xproject/types": "^0.6.1",
@@ -28,16 +29,16 @@
     "ffmpeg-static": "^2.3.0",
     "ffprobe-static": "^2.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
-    "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
+    "hash.js": "^1.1.5",
     "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
     "ipfs": "^0.30.1",
-    "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
     "rxjs": "^6.2.2",
+    "jquery": "^3.3.1",
+    "froala-editor": "2.8.1",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
