fix(core): contain nodejs module when tsc core

--- a/projects/core/tsconfig.common.json
+++ b/projects/core/tsconfig.common.json
@@ -23,7 +23,8 @@
     ]
   },
   "files": [
-    "./public_api.ts"
+    "./public_api.ts",
+    "./nodejs/public_api.ts"
   ],
   "exclude": [
     "dist",
