fix(core): fix @muzika/core path for compile core/nodejs module

--- a/projects/core/tsconfig.electron.compile.json
+++ b/projects/core/tsconfig.electron.compile.json
@@ -15,6 +15,9 @@
       "../../node_modules/@types",
       "../../node_modules/@0xproject/typescript-typings/types"
     ],
+    "paths": {
+      "@muzika/core": ["./public_api.ts"]
+    },
     "lib": [
       "es2017",
       "es2016",
