--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -22,6 +22,7 @@
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
     "electron-is-dev": "^0.3.0",
+    "electron-updater": "^3.0.3",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
