--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -19,6 +19,7 @@
     "aes-js": "^3.1.1",
     "bignumber.js": "^5.0.0",
     "chalk": "^2.4.1",
+    "command-exists": "^1.2.7",
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
     "electron-is-dev": "^0.3.0",
