--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:studio": "npm run postinstall && cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:studio-renderer electron:serve",
     "start:studio:stage": "npm run postinstall && cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:studio-renderer:stage electron:serve",
     "ss": "npm run start:studio",
-    "sss": "npm run start:studio:stage",
+    "sss": "npm run electron:tsc && npm run start:studio:stage",
     "serve:studio-renderer": "ng serve muzika-studio-renderer --hmr",
     "serve:studio-renderer:stage": "npm run serve:studio-renderer -- -c stage",
     "start:web": "npm run postinstall:web && ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
@@ -163,6 +163,7 @@
     "codelyzer": "^4.4.2",
     "command-line-args": "^5.0.2",
     "cross-env": "^5.1.6",
+    "devtron": "^1.4.0",
     "electron": "2.0.5",
     "electron-builder": "20.25.0",
     "electron-reload": "1.2.5",
